--- a/SpeedrunVisualizer.html
+++ b/SpeedrunVisualizer.html
@@ -7,23 +7,43 @@
     <script src="https://d3js.org/d3.v4.js"></script>
     <title>Speedrun Vizualizer</title>
 </head>
-
 <body>
     <div id="legend">
         <h1>Legend<h1>
+        <div class="legend-module">
+            <p>Game:</p>
+            <select id="game-dropdown">
+                <option value="pd0wq31e">Super Mario World</option>
+            </select>
+            <p>Category:</p>
+            <select id="category-dropdown">
+                <option value="7kjrn323">96 Exit</option>
+            </select>
+            <p>Level:</p>
+            <select id="level-dropdown">
+                <option value="7kjrn323">96 Exit</option>
+            </select>
+        </div>
+        <div class="legend-module">
+            
+        </div>
+        <div class="legend-module">
+
+        </div>
         <Button>Add Game</Button>
     </div>
     <div id="graph-pane">
         <h1>Graph</h1>
+        
     </div>
     <textarea id="data-box"></textarea>
     <div id="date-panel">
-        <Button>Refresh Graph</Button>
+        <Button onclick="refreshGraph()">Refresh Graph</Button>
         <h3>Date Range</h3>
         <p>from</p>
-        <textarea class="date-box" id="month1">1</textarea>
+        <textarea class="date-box" id="month1">01</textarea>
         <p>/</p>
-        <textarea class="date-box" id="day1">1</textarea>
+        <textarea class="date-box" id="day1">01</textarea>
         <p>/</p>
         <textarea class="date-box" id="year1">16</textarea>
         <br>
@@ -32,10 +52,8 @@
         <p>/</p>
         <textarea class="date-box" id="day2">31</textarea>
         <p>/</p>
-        <textarea class="date-box" id="year2">23</textarea>
+        <textarea class="date-box" id="year2">2023</textarea>
     </div>
-    <script type="text/javascript" src="SpeedrunFunctions.js" onload="displayGraph()">
-
-    </script>
+    <script type="text/javascript" src="SpeedrunFunctions.js" onload="displayGraph()"></script>
 </body>
 </html>
