--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <!-- Include Tailwind CSS -->
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <script src="https://d3js.org/d3.v4.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
     <title>Speedrun Visualizer</title>
 </head>
 <body class="bg-gray-400    ">
@@ -40,8 +41,8 @@
 </div>
 
 <div class="flex justify-between items-center">
-    <div class="w-1/5">
-        <button onclick="refreshAxes(); populateGraph();" class="bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded mr-4">Refresh Date</button>
+    <div class="w-1/6">
+        <button onclick="refreshAxes(); populateGraph(); d3.select('#data-box').property('value','Click on a datapoint for more information.');" class="bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded mr-4">Refresh Date</button>
         <h3 class="text-lg font-semibold mb-1">Date Range</h3>
         <div class="flex items-center mb-4">
             <p class="mr-1">from</p>
@@ -66,7 +67,7 @@
         <input type="range" id="time-box" name="time-box" min="0" max="36000" step="100"
                class="w-full bg-white border border-gray-300 rounded-md py-2 px-0 focus:outline-none focus:ring focus:border-blue-300"
                value="36000"
-               onchange="refreshAxes(); populateGraph(); d3.select('#data-box').property('value','')">
+               onchange="refreshAxes(); populateGraph(); d3.select('#data-box').property('value','Click on a datapoint for more information.');">
         <div class="flex justify-between mt-2">
             <span>0</span>
             <span>36,000</span>
@@ -74,7 +75,7 @@
         <!-- Display the chosen value dynamically -->
         <p class="mt-2 text-lg" id="chosen-value"></p>
     </div>
-    <textarea id="data-box" class="resize-none w-2/5 px-1 h-32"></textarea>
+    <textarea id="data-box" class="resize-none w-2/5 px-1 ml-5 h-32">Click on a datapoint for more information.</textarea>
 </div>
 <!-- JavaScript Section -->
 <script type="text/javascript" src="SpeedrunFunctions.js" onload="addAxes()"></script>
